Update the config.yml file to reflect changes made to the apps Configuration and Discovery

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 nomenclature:
-  name: gif
+  name: easter_eggs
   verboseName: GIF
 baseUrls:
   http: gif/
-  isApi: true
+  static: gif/
+isApi: true
